# finance-tracker

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  ruff.toml  streamlit_app.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: adr.md  bug_report.md  feature_request.md  tech-debt-template.md  tech-debt.md
.github/actions/retrieve_secrets/: action.yml
.github/actions/setup/: action.yaml  action.yml
.github/actions/workflows/: code-quality.yaml
.github/workflows/: code-quality.yml  pr-title.yml  release.yml
docs/: joint_workflow_plan.md
migrations/: README.md  __init__.py  __main__.py  cli.py  config.py  discovery.py  errors.py  runner.py
migrations/versions/: 0001_initial_schema.sql  0002_joint_workflow.sql  0003_ownership_requires_account.sql  0006_subscriptions_view_ownership.sql  0007_one_joint_account_per_user.sql  0008_budget_tracker_ownership_unique.sql
migrations/versions/prod/: 0005_enable_rls.sql
migrations/versions/testing/: 0004_grant_test_permissions.sql
sql_stuff/: create_tables.sql  drop_tables.sql  enable_rls.sql  fix_156_current_month.sql  grant_test_permissions.sql
sql_stuff/migrations/: README.md
src/: authentication.py  config.py  create_tables.sql  dataframe_editor.py  dataframe_handling.py  models.py  ss_keys.py  streamlit_app.py  utils.py
src/adapters/: __init__.py  errors.py
src/adapters/supabase/: client.py  repository.py  table_names.py
src/apps/: __init__.py  authentication.py  data_client.py  streamlit_app.py
src/apps/blocks/: bank_accounts_block.py  base_block.py  budget_tracker_block.py  one_offs_block.py  payments.py  payments_block.py  subscriptions_block.py
src/apps/buttons/: add_button.py  bank_button.py  filter_button.py  sort.py  sort_button.py
src/apps/pages/: dashboard.py  docs_pages.py  (+2 more)
src/buttons/: add.py
src/composition/: __init__.py  cache.py  grid_data_source.py  wiring.py
src/docs/: 01_getting_started.md  02_one_offs.md  03_budget_tracker.md  04_payments.md  05_bank_accounts.md  06_subscriptions.md  07_finance_analysis.md  08_joint_accounts.md
src/domain/: __init__.py  entities.py  errors.py  query.py  read_models.py
src/driven_adapters/: cache.py
src/driving_adapters/: __init__.py  auth.py  cache.py  error_boundary.py  session.py  ss_keys.py
src/libs/: __init__.py  auth.py  caching.py  config.py  constants.py  data_client.py  dataframe_handling.py  frontend_models.py  models.py  subscription_reconciler.py  utils.py
src/ports/: __init__.py  authentication.py  errors.py  repository.py
src/ui/: __init__.py  auth.py  cache.py  data_client.py  lookups.py
src/use_cases/: __init__.py  bank_one_offs.py  contribute_to_joint.py  errors.py  initialise_joint_workspace.py  initialise_workspace.py  reconcile_subscriptions.py
tests/: conftest.py  ruff.toml
tests/libs/: test_config.py
(+159 files in other folders)
