[project]
name = "finance-tracker"
version = "0.1.0"
description = "This is the finance-tracker package for managing personal finances!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime",
    "pandas-stubs",
    "pyjwt",
    "python-dateutil",
    "st-supabase-connection",
    "streamlit[auth]",
    "streamlit-extras",
]

[dependency-groups]
dev = [
    "poethepoet",
    "pytest",
    "python-dotenv",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.uv]
link-mode = "copy"

[tool.ty.src]
# To be removed in #23
exclude = ["src/libs/dataframe_handling.py"]

[tool.poe.tasks]
lint = {shell = "uv run ruff check && uv run ty check"}
app = "uv run streamlit run src/streamlit_app.py"

