[project]
name = "finance-tracker"
version = "0.3.0"
description = "This is the finance-tracker package for managing personal finances!"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "datetime",
    "pandas-stubs",
    "pyjwt",
    "python-dateutil",
    "st-supabase-connection",
    "streamlit[auth]",
    "streamlit-extras",
]

[dependency-groups]
dev = [
    "commitizen",
    "poethepoet",
    "pytest",
    "python-dotenv",
    "ruff",
    "ty",
]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
pythonpath = ["src"]

[tool.uv]
link-mode = "copy"

[tool.ty.src]
# To be removed in #23
exclude = ["src/libs/dataframe_handling.py"]

[tool.poe.tasks]
lint = {shell = "uv run ruff check && uv run ty check"}
app = "uv run streamlit run src/streamlit_app.py"

[tool.commitizen]
name = "cz_conventional_commits"
version_provider = "pep621"
tag_format = "v$version"
major_version_zero = true
annotated_tag = true
update_changelog_on_bump = true
changelog_start_rev = "v0.1.0"
# Keep uv.lock (which records this package's own version) in sync with the
# bump. Runs after the version is written, before cz's `git commit -a`, so the
# regenerated lock is folded into the bump commit.
pre_bump_hooks = ["uv lock"]

